@@ -6,6 +6,12 @@ Template: partman-auto/progress/info
 Type: text
 _Description: Computing the new partitions ...
 
+Template: partman-auto/no_recipe
+Type: error
+_Description: Automatic partitioning failed
+ This probably happened because the selected drive or free space is too
+ small to be automatically partitioned.
+
 Template: partman-auto/autopartitioning_failed
 Type: error
 _Description: Automatic partitioning failed
