@@ -12,6 +12,11 @@ partman-auto (8) UNRELEASED; urgency=low
       table with the default for the architecture type.  Closes: #235923
     - perform_recipe: start progress bar, as autopartitioning can be quiet
       slow
+  * Joey Hess
+    - add xfs and reiserfs to the valid fs list (should this use info from the
+      plugins?)
+    - if there is no valid recipe, bail with an error instead of hanging.
+      Closes: #235964
     
  -- Anton Zinoviev <zinoviev@debian.org>  Thu,  4 Mar 2004 21:16:50 +0200
 
